"change img path"

--- a/index.html
+++ b/index.html
@@ -115,27 +115,27 @@
 			<div class="cause-category">
 				<p><b style="color: red;">Track, Roadbed, and Structure:</b> This category includes causes related to the condition of the track and roadbed structures.<br />
 				Cause groups examples: Broken Rails or Welds, Joint Bar Defects, Buckled Track</p>
-				<img src="../imgs/track_roadbed_structure.jpg" alt="Track, Roadbed, and Structure">
+				<img src="imgs/track_roadbed_structure.jpg" alt="Track, Roadbed, and Structure">
 			</div>
 			<div class="cause-category">
 				<p><b style="color: grey;">Signals and Communication:</b> This category includes causes related to signaling systems and communication issues.<br />
 					Cause groups example: Signal Failures</p>
-				<img src="../imgs/signals_communication.jpg" alt="Signals and Communication">
+				<img src="imgs/signals_communication.jpg" alt="Signals and Communication">
 			</div>
 			<div class="cause-category">
 				<p><b style="color: blue;">Train Operation – Human Factors:</b> This category includes causes related to human errors in train operation.<br />
 					Cause groups examples: Brake Operation, Handbrake Operations, Train Handling</p>
-				<img src="../imgs/train_operation_human_factors.jpg" alt="Train Operation – Human Factors">
+				<img src="imgs/train_operation_human_factors.jpg" alt="Train Operation – Human Factors">
 			</div>
 			<div class="cause-category">
 				<p><b style="color: orange;">Mechanical and Electrical Failures:</b> This category includes causes related to mechanical and electrical failures in the train.<br />
 					Cause groups examples: Centerplate/Carbody Defects, Coupler Defects, Broken Wheels</p>
-				<img src="../imgs/mechanical_electrical_failures.jpg" alt="Mechanical and Electrical Failures">
+				<img src="imgs/mechanical_electrical_failures.jpg" alt="Mechanical and Electrical Failures">
 			</div>
 			<div class="cause-category">
 				<p><b style="color: magenta;">Miscellaneous:</b> This category includes other miscellaneous causes that do not fit into the above categories.<br />
 					Cause groups examples: Obstructions, Grade Crossing Collisions, Extreme Weather</p>
-				<img src="../imgs/miscellaneous.jpg" alt="Miscellaneous">
+				<img src="imgs/miscellaneous.jpg" alt="Miscellaneous">
 			</div>
 		</div>
 	</div>
