Final edits and essay updated.

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <li><a href='https://observablehq.com/@stanfordvis/making-d3-charts-interactive' target='_blank'>Making D3 Charts Interactive by Maneesh Agrawala</a></li>
                     <li><a href='https://alvarotrigo.com/fullPage/' target='_blank'>Fullpage Guide by Alvaro Trigo</a></li>
                 </ul>
-                <h2>Reference</h2>
+                <h2>References</h2>
                 <ul>
                     <li><a href='https://railroads.dot.gov/safety-data/forms-guides-publications/guides/monetary-threshold-notice' target='_blank'>FRA Monetary Threshold Notice</a></li>
                     <li><a href='https://www.researchgate.net/publication/345142468_Quantitative_Analysis_of_Changes_in_Freight_Train_Derailment_Causes_and_Rates' target='_blank'>Quantitative Analysis of Changes in Freight Train Derailment Causes and Rates</a></li>
